fix clipped Edit drop down due to overflow on collapsibleregion

--- a/less/moodle/course.less
+++ b/less/moodle/course.less
@@ -38,6 +38,10 @@
       padding-right: 0.5em;
     }
     
+    .collapsibleregion {
+      overflow: visible;
+    }
+    
     .activity {
         .spinner {
             left: 100%;
